--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
   cordova:
     <<: *defaults
     docker:
-    - image: marcoturi/ionic #beevelop/ionic # circleci/android:api-28-node8-alpha
+    - image: okode/ionic-android #marcoturi/ionic #beevelop/ionic #circleci/android:api-28-node8-alpha
     steps:
       - restore_cache:
           key: repository-{{ .Environment.CIRCLE_SHA1 }}
