--- a/.circleci/images/cordova/Dockerfile
+++ b/.circleci/images/cordova/Dockerfile
@@ -1,8 +1,7 @@
 FROM circleci/android:api-28-node8-alpha
 
-MAINTAINER https://ngx-rocket.com/home
-
-# Install Cordova and Ionic
+# install cordova and ionic
 RUN sudo npm install -g ionic cordova
 RUN cordova telemetry off
-RUN CI=true ionic config set -g daemon.update
+RUN CI=true ionic config set -g daemon.updates false
+RUN ionic config set -g telemetry false
