--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,10 +59,10 @@ jobs:
           # environment:
           #   TEST_ANDROID: 1
 
-  cordova:
+  cordova_android:
     <<: *defaults
     docker:
-    - image: circleci/android:api-28-node8-alpha #ekhozie/generate-ngx-rocket-cordova:0.0.1 #marcoturi/ionic #beevelop/ionic #circleci/android:api-28-node8-alpha
+    - image: ekhozie/generate-ngx-rocket-cordova:0.0.1 #circleci/android:api-28-node8-alpha
     steps:
       - restore_cache:
           key: repository-{{ .Environment.CIRCLE_SHA1 }}
@@ -75,6 +75,22 @@ jobs:
           environment:
             TEST_ANDROID: 1
 
+  cordova_ios:
+    <<: *defaults
+    docker:
+    - image: ekhozie/generate-ngx-rocket-cordova:0.0.1 #circleci/android:api-28-node8-alpha
+    steps:
+      - restore_cache:
+          key: repository-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          name: npm link
+          command: sudo npm link
+      - run:
+          name: Run tests and package android app
+          command: npm test app/cordova/bootstrap
+          environment:
+            TEST_IOS: 1
+
 workflows:
   version: 2
   build:
@@ -83,6 +99,9 @@ workflows:
       - test:
           requires:
             - install
-      - cordova:
+      - cordova_android:
+          requires:
+            - install
+      - cordova_ios:
           requires:
             - install
