--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,9 @@ jobs:
       - restore_cache:
           *restore-repository-cache
       - run:
+          name: install node
+          command: brew install node
+      - run:
           name: npm link
           command: sudo npm link
       - run:
