--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,15 +85,12 @@ jobs:
     machine:
       xcode:
         version: 8.2
-    dependencies:
-    pre:
-      - brew install node
     steps:
       - restore_cache:
           *restore-repository-cache
-      # - run:
-      #     name: install node
-      #     command: brew install node
+      - run:
+          name: install node
+          command: brew install node
       - run:
           name: npm link
           command: sudo npm link
