--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
   build_cordova_android:
     <<: *defaults
     docker:
-    - image: ekhozie/generate-ngx-rocket-cordova:0.0.1 #circleci/android:api-28-node8-alpha
+    - image: ngxrocket/circleci-dockerfiles:cordova
     steps:
       - restore_cache:
           *restore-repository-cache
