--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,9 +73,15 @@ jobs:
       xcode: "9.3.0"
     steps:
       - checkout
+      # - run:
+      #     name: install node
+      #     command: brew install node
+      # - run:
+      #     name: install yarn
+      #     command: brew install yarn
       - run:
-          name: install node
-          command: brew install node
+          name: npm install
+          command: npm install
       - run:
           name: npm link
           command: sudo npm link
