--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,74 @@
 version: 2
 
+aliases:
+  - &workspace_dir ~/generator-ngx-rocket
+
+  - &npm-cache npm-dependencies-{{ checksum "package.json" }}
+
+  - &repository-cache repository-{{ .Environment.CIRCLE_SHA1 }}
+
+  - &restore-repository-cache
+      key: *repository-cache
+
+  - &npm-link
+      name: npm link
+      command: sudo npm link
+
 general:
-  # work in progress
-  # activate circleci only on pending circleci branches
   branches:
     only:
-      #- master
-      - /feature\/circleci.*/
+      - master
+
+defaults: &defaults
+  docker:
+    - image: circleci/node:8-browsers
+  working_directory: *workspace_dir
 
 jobs:
-   build:
-     docker:
-       - image: circleci/node:8-browsers
-     steps:
-       - checkout
+  install:
+    <<: *defaults
+    steps:
+      - checkout
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - *npm-cache
+          # fallback to using the latest cache if no exact match is found
+          - npm-dependencies-
+      - run:
+          name: Install yarn
+          command: sudo npm install -g yarn@latest
+      - run:
+          name: npm install
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: *npm-cache
+      - save_cache:
+          paths:
+            - *workspace_dir
+          key: *repository-cache
+
+  build_cordova_android:
+    <<: *defaults
+    docker:
+    - image: ngxrocket/circleci-dockerfiles:cordova
+    steps:
+      - restore_cache:
+          *restore-repository-cache
+      - run: *npm-link
+      - run:
+          name: Run tests and build android app
+          command: npm test app/cordova/ionic
+          environment:
+            TEST_ANDROID: 1
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - install
+      - build_cordova_android:
+          requires:
+            - install
