ionic, its deps, and fixes for beta5, lint shutups, and ion e2e fixes

--- a/generators/app/templates/.stylelintrc
+++ b/generators/app/templates/.stylelintrc
@@ -25,6 +25,12 @@
     "selector-max-id": 0,
     "selector-no-qualifying-type": true,
     "selector-max-universal": 0,
+    "selector-type-no-unknown": [
+      true,
+      {
+        "ignore": ["custom-elements", "default-namespace"]
+      }
+    ],
     "selector-pseudo-element-no-unknown": [
       true,
       {
