--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test:addon": "npm run lint -s && TEST_ADDON=1 ./scripts/test.sh",
     "deploy": "scripts/deploy.sh",
     "postpublish": "git tag -a $npm_package_version -m \"$npm_package_version\" && git push --tags",
-    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -m 'Updated changelog'"
+    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -m 'Update changelog'"
   },
   "dependencies": {
     "@ngx-rocket/ascii-logo": "^1.0.1",
