--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-ngx-rocket",
-  "version": "6.0.0",
-  "description": "Extensible Angular 7+ enterprise-grade project generator based on angular-cli with best practices from the community. Includes PWA and Cordova support, coding guides and more!",
+  "version": "6.0.1",
+  "description": "Extensible Angular 7+ enterprise-grade project generator based on angular-cli with best practices from the community. Includes PWA/Cordova/Electron support, coding guides and more!",
   "repository": "ngx-rocket/generator-ngx-rocket",
   "keywords": [
     "yeoman-generator",
@@ -26,6 +26,7 @@
     "mobile",
     "web",
     "pwa",
+    "electron",
     "tool",
     "cli"
   ],
