feat: 🎸 Add Jest as an option
Propose to replace Karma/Jasmine by Jest to manage unit tests. This commit adds only the choice and impacted configuration files. Unit tests are not yet fixed

✅ Closes: #464

--- a/generators/app/templates/_tsconfig.spec.json
+++ b/generators/app/templates/_tsconfig.spec.json
@@ -3,12 +3,18 @@
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
     "types": [
+<% if (props.tools.includes('jest')) { -%>
+      "jest",
+<% } else { -%>
       "jasmine",
+<% } -%>
       "node"
     ]
   },
   "files": [
+<% if (!props.tools.includes('jest')) { -%>
     "src/test.ts",
+<% } -%>
     "src/polyfills.ts"
   ],
   "include": [
