Add missing manifest caching

--- a/generators/app/templates/__pwa._ngsw-config.json
+++ b/generators/app/templates/__pwa._ngsw-config.json
@@ -8,6 +8,7 @@
         "files": [
           "/favicon.ico",
           "/index.html",
+          "/manifest.json",
           "/*.css",
           "/*.js"
         ]
