--- a/generators/app/templates/__pwa._ngsw-config.json
+++ b/generators/app/templates/__pwa._ngsw-config.json
@@ -20,7 +20,11 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/assets/**"
+          "/assets/**",
+          "/*.woff",
+          "/*.woff2",
+          "/*.ttf",
+          "/*.eot"
         ]
       }
     }
