Add --debug-infos flag in CLI (close #377)

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ngx-rocket/core": "^5.0.0",
     "chalk": "^2.4.2",
     "conf": "^4.1.0",
+    "cross-spawn": "^6.0.5",
     "figures": "^3.0.0",
     "fuzz-run": "^1.0.2",
     "inquirer": "^6.3.1",
