--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ install:
   - npm link
 
 before_script:
+  - export NODE_OPTIONS=--max_old_space_size=2048
   - export DBUS_SESSION_BUS_ADDRESS=/dev/null
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
