Migrate to Azure Pipelines CI

--- a/.npmignore
+++ b/.npmignore
@@ -4,14 +4,14 @@
 /sample*/
 /cache/
 /sample-app/
+/dist/
 /deploy/
 /scripts/
 /.gitignore
 /.npmignore
 /.editorconfig
 /.github_changelog_generator
-/.travis.yml
-/appveyor.yml
+/.azure-pipelines.yml
 /CODE_OF_CONDUCT.md
 /CONTRIBUTING.md
 .DS_Store
