Revert change on android test env

--- a/.ci-templates/test.yml
+++ b/.ci-templates/test.yml
@@ -26,6 +26,8 @@ jobs:
                 packageManager: ${{ coalesce(test.packageManager, 'npm') }}
                 ${{ if and(contains(os, 'mac'), contains(node, '>=')) }}:
                   testAndroid: ${{ coalesce(test.android, '') }}
+                ${{ if not(and(contains(os, 'mac'), contains(node, '>='))) }}:
+                  testAndroid: ''
 
   pool:
     vmImage: $(osImage)
