--- a/generators/app/templates/_tsconfig.spec.json
+++ b/generators/app/templates/_tsconfig.spec.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/spec",
+    "outDir": "./out-tsc/spec",
 <% if (props.tools.includes('jest')) { -%>
     "allowJs": true,
 <% } -%>
