--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "cross-spawn": "^7.0.1",
     "figures": "^3.2.0",
     "fuzz-run": "^1.0.2",
+    "globby": "^11.0.0",
     "inquirer": "^7.0.4",
     "insight": "^0.10.3",
     "lodash.camelcase": "^4.3.0",
