feat: add prefix and aliasing for core/shared (close #277)
Also added `--no-prefix` option for choice and backward compatibility.

BREAKING CHANGE:
core/shared folders now have an `@` prefix to have them listed first,
along with a direct TypeScript alias for imports.

--- a/generators/app/templates/_tsconfig.json
+++ b/generators/app/templates/_tsconfig.json
@@ -30,6 +30,12 @@
     "baseUrl": "./",
     "paths": {
       "@app/*": ["src/app/*"],
+<% if (props.usePrefix) { -%>
+      "@core": ["src/app/@core"],
+      "@core/*": ["src/app/@core/*"],
+      "@shared": ["src/app/@shared"],
+      "@shared/*": ["src/app/@shared/*"],
+<% } -%>
       "@env/*": ["src/environments/*"]
     }
   },
