--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "conf": "^6.2.1",
     "cross-spawn": "^7.0.1",
     "figures": "^3.2.0",
+    "fs-extra": "^9.0.0",
     "fuzz-run": "^1.0.2",
     "inquirer": "^7.1.0",
     "insight": "^0.10.3",
@@ -70,6 +71,7 @@
     "lodash.get": "^4.4.2",
     "lodash.upperfirst": "^4.3.1",
     "minimist": "^1.2.5",
+    "replace-in-file": "^5.0.2",
     "semver": "^7.1.3",
     "update-notifier": "^4.1.0",
     "yeoman-environment": "^2.8.1"
