ci: add missing git configuration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,10 @@ jobs:
         run: npm link
         env:
           CI: true
+      - name: Configure git
+        run: |
+          git config --local user.email "semantic-release-bot@martynus.net"
+          git config --local user.name "semantic-release-bot"
       - name: Deploy starter-kit updates
         run: npm run deploy
         env:
