--- a/package.json
+++ b/package.json
@@ -59,29 +59,29 @@
   "dependencies": {
     "@ngx-rocket/ascii-logo": "^1.0.1",
     "@ngx-rocket/core": "^5.0.2",
-    "chalk": "^3.0.0",
-    "conf": "^6.2.1",
-    "cross-spawn": "^7.0.1",
+    "chalk": "^4.1.0",
+    "conf": "^7.1.2",
+    "cross-spawn": "^7.0.3",
     "figures": "^3.2.0",
-    "fs-extra": "^9.0.0",
+    "fs-extra": "^9.0.1",
     "fuzz-run": "^1.0.2",
-    "inquirer": "^7.1.0",
+    "inquirer": "^7.3.3",
     "insight": "^0.10.3",
     "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.upperfirst": "^4.3.1",
     "minimist": "^1.2.5",
-    "replace-in-file": "^5.0.2",
-    "semver": "^7.1.3",
-    "update-notifier": "^4.1.0",
-    "yeoman-environment": "^2.8.1"
+    "replace-in-file": "^6.1.0",
+    "semver": "^7.3.2",
+    "update-notifier": "^4.1.1",
+    "yeoman-environment": "^2.10.3"
   },
   "devDependencies": {
     "@jedmao/semantic-release-npm-github-config": "^1.0.9",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.1.0",
-    "semantic-release": "^17.0.4",
-    "xo": "^0.28.1"
+    "commitizen": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "semantic-release": "^17.1.1",
+    "xo": "^0.33.1"
   },
   "engines": {
     "node": ">=10.9.0",
@@ -89,7 +89,10 @@
   },
   "xo": {
     "space": true,
-    "prettier": true
+    "prettier": true,
+    "rules": {
+      "unicorn/no-reduce": "off"
+    }
   },
   "config": {
     "commitizen": {
