--- a/package.json
+++ b/package.json
@@ -77,10 +77,10 @@
     "yeoman-environment": "^2.10.3"
   },
   "devDependencies": {
-    "@jedmao/semantic-release-npm-github-config": "^1.0.9",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^17.1.1",
+    "semantic-release-npm-github": "^1.0.4",
     "xo": "^0.37.1"
   },
   "engines": {
@@ -100,8 +100,7 @@
     }
   },
   "release": {
-    "extends": "@jedmao/semantic-release-npm-github-config",
-    "tagFormat": "${version}",
+    "extends": "semantic-release-npm-github",
     "branches": "main"
   },
   "files": [
