--- a/generators/app/templates/_tsconfig.json
+++ b/generators/app/templates/_tsconfig.json
@@ -43,10 +43,10 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
-    "preserveWhitespaces": true,
 <% if (props.strict) { -%>
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
 <% } -%>
+    "preserveWhitespaces": true
   }
 }
