Add plugin reference https://angular.io/guide/language-service

--- a/generators/app/templates/_tsconfig.json
+++ b/generators/app/templates/_tsconfig.json
@@ -33,6 +33,13 @@
       "dom"
     ],
     "baseUrl": "./",
+<% if (props.strict) { -%>
+    "plugins": [
+      {
+        "name": "@angular/language-service"
+      }
+    ],
+<% } -%>
     "paths": {
       "@app/*": ["src/app/*"],
 <% if (props.usePrefix) { -%>
