refactor: update and fix lint issues

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^18.0.1",
     "semantic-release-npm-github": "^2.0.0",
-    "xo": "^0.42.0"
+    "xo": "^0.47.0"
   },
   "engines": {
     "node": ">=12.20.0",
@@ -93,8 +93,12 @@
     "rules": {
       "unicorn/no-array-reduce": "off",
       "unicorn/prefer-module": "off",
-      "unicorn/no-array-for-each": "off"
+      "unicorn/no-array-for-each": "off",
+      "unicorn/prefer-object-from-entries": "off"
     }
+  },
+  "prettier": {
+    "trailingComma": "none"
   },
   "config": {
     "commitizen": {
