--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "cross-spawn": "^7.0.3",
     "figures": "^3.2.0",
     "fs-extra": "^10.0.0",
-    "fuzz-run": "^1.0.2",
+    "fuzz-run": "^2.2.0",
     "inquirer": "^8.1.2",
     "insight": "^0.11.1",
     "lodash.camelcase": "^4.3.0",
@@ -79,9 +79,9 @@
   "devDependencies": {
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "semantic-release": "^18.0.1",
-    "semantic-release-npm-github": "^2.0.0",
-    "xo": "^0.47.0"
+    "semantic-release": "^19.0.2",
+    "semantic-release-npm-github": "^3.0.0",
+    "xo": "^0.49.0"
   },
   "engines": {
     "node": ">=12.20.0",
@@ -94,7 +94,8 @@
       "unicorn/no-array-reduce": "off",
       "unicorn/prefer-module": "off",
       "unicorn/no-array-for-each": "off",
-      "unicorn/prefer-object-from-entries": "off"
+      "unicorn/prefer-object-from-entries": "off",
+      "object-shorthand": "off"
     }
   },
   "prettier": {
