--- a/.ci-templates/test.yml
+++ b/.ci-templates/test.yml
@@ -44,6 +44,13 @@ jobs:
       versionSpec: $(nodeVersion)
     displayName: Install Node.js
 
+  - task: JavaToolInstaller@0
+    condition: eq(variables['testAndroid'], true)
+    inputs:
+      versionSpec: '11'
+      jdkArchitectureOption: 'x64'
+      jdkSourceOption: 'PreInstalled'
+
   - bash: |
       npm install
       npm install -g yarn@latest
